# flamebolt

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.ps1  build.sh
features/authorization/: Cargo.toml
features/authorization/src/: lib.rs
features/authorization/src/entities/: user.rs
features/slice_1/: Cargo.toml
features/slice_1/src/: lib.rs
features/slice_1/src/entities/: something.rs
features/slice_2/: Cargo.toml
features/slice_2/src/: lib.rs
features/slice_2/src/entities/: item.rs
features/slice_3/: Cargo.toml
features/slice_3/src/: lib.rs
features/slice_3/src/entities/: widget.rs
flamebolt/: Cargo.toml  Trunk.toml  build.rs  index.html
flamebolt/client/: Cargo.toml  index.html
flamebolt/client/src/: components.rs  main.rs
flamebolt/client/src/components/: calendar.rs  create.rs  dashboard.rs  home.rs  page_not_found.rs  pool.rs  profile.rs  projects.rs  server.rs  sidebar.rs  todo_lists.rs  workload.rs
flamebolt/server/: Cargo.toml
flamebolt/server/src/: main.rs
flamebolt/src/: app.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs  value_objects.rs
shared/src/value_objects/: email_address.rs
