[workspace]
resolver = "3"
members = [ "features/authorization"
          , "features/slice_2"
          , "features/slice_3"
          , "flamebolt/server"
          , "flamebolt/client"
          , "shared" ]

[workspace.dependencies]
axum = { version = "0.8.8", features = ["http2", "macros", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
yew = { version = "0.22.0", features = ["csr"] }
tokio = { version = "1.49.0", features = ["full"] }
foyer = "0.22.3"
