[package]
name = "flamebolt"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "flamebolt_web"
path = "src/app.rs"

[dependencies]
yew = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
slice_1 = { path = "../features/slice_1" }
tower-http = { version = "0.6", features = ["fs"] }
