[package]
name = "flamebolt_server"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
slice_1 = { path = "../../features/slice_1" }
slice_2 = { path = "../../features/slice_2" }
slice_3 = { path = "../../features/slice_3" }
tower-http = { version = "0.6", features = ["fs"] }
