[package]
name = "flamebolt_server"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.20.0", features = ["v4"] }
authorization = { path = "../../features/authorization" }
slice_2 = { path = "../../features/slice_2" }
slice_3 = { path = "../../features/slice_3" }
tower-http = { version = "0.6", features = ["fs"] }
